# mythcommflag

./: .gitignore  LICENSE  LICENSE.txt  README.md  comskip.ini  cpruk.ini  mythcommflag-wrapper.py  mythcommflag-wrapper.sh  mythvidexport.py  pyproject.toml  pyptoject.toml  setup.py
.github/workflows/: python-package.yml
.pybuild/cpython3_3.12_mythcommflagwrapper/: .pydistutils.cfg
debian/: changelog  control  copyright  debhelper-build-stamp  files  python3-mythcommflagwrapper.postinst.debhelper  python3-mythcommflagwrapper.prerm.debhelper  python3-mythcommflagwrapper.substvars  rules
debian/python3-mythcommflagwrapper/DEBIAN/: conffiles  control  md5sums  postinst  prerm
debian/python3-mythcommflagwrapper/usr/lib/python3/dist-packages/mythcommflagwrapper/: const.py
debian/python3-mythcommflagwrapper/usr/lib/python3/dist-packages/mythcommflagwrapper-0.1.0.egg-info/: PKG-INFO
reference/: mythcommflag-wrapper.sh
src/: mythcommflag-wrapper.py
src/mythcommflagwrapper/: __about__.py  __init__.py  __main__.py  const.py  mythcommflagwrapper.py
src/mythcommflagwrapper.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mythcommflagwrapper/data_files/: comskip.ini
src/mythcommflagwrapper/scripts/: mythcommflag-wrapper
tests/: __init__.py  test_main.py
