[project]
name = "mythcommflagwrapper"
description = "Wrapper around comskip for use by MythTV"
dynamic = ["dependencies", "requires-python"]
license = "MIT"
readme = "README.md"
authors = [
    {name = "Charlie Rusbridger", email = "charlie@rusbridger.com"}
]
repository = "https://github.com/charrus/mythcommflag"
packages = [
    { include = "mythcommflagwrapper", from = "src" }
]
version = "0.1.4"

[project.urls]
Repository = "https://github.com/charrus/mythcommflag"
Issues = "https://github.com/charrus/mythcommflag/issues"

[project.scripts]
mythcommflag-wrapper = "mythcommflagwrapper.scripts.mythcommflag-wrapper:main"

[tool.poetry]
name = "mythcommflagwrapper"
description = "Wrapper around comskip for use by MythTV"
authors = ["Charlie Rusbridger <charlie@rusbridger.com>"]
version = "0.1.4"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.4.0"
mysqlclient = "^2.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.3.7"
mypy = "^1.15.0"
mythtv = {path = "../mythtv/mythtv/bindings/python/dist/MythTV-34.0-py3-none-any.whl"}

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  'D',
  'E',
  'W',
  'F',
  'I001',
  'E501',
  'RUF',
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "RUF200", # poetry < 2 uses old format for authors
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_expr = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
